@@ -131,3 +131,5 @@
 	- Add various ORDER BY clauses to help with listing and delete by index.
 		(#39)
 	- Add CLEAR QUIETS, UNQUIET, and remove quiets in EXPIREBANS. (#25)
+	- FloodServ clears up +q's on it's own, FloodServ GC iterates only FS
+		channels more often and all valid channels. (#6)
